# slc

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  build-rel.bat  build.bat  build.sh  mod.json  support.md
.forgejo/workflows/: geode.yml
include/libavutil/: ffversion.h
lib/tabby/: .gitignore  CMakeLists.txt  README.md
lib/tabby/include/: tabby.hpp
lib/tabby/include/context/: context.hpp
lib/tabby/include/util/: config.hpp  defines.hpp
lib/tabby/include/widgets/: animated.hpp  button.hpp  checkbox.hpp  color.hpp  drag.hpp  dropdown.hpp  font.hpp  input.hpp  layout.hpp  overlay.hpp  radio.hpp  state.hpp  text.hpp  window.hpp
lib/tabby/lib/glad/include/glad/: gl.h  wgl.h
lib/tabby/lib/imgui_lib/: imgui.cpp  imgui_widgets.cpp
lib/tabby/lib/imgui_lib/backends/: imgui_impl_glfw.cpp
lib/tabby/src/context/: context.cpp
lib/tabby/src/widgets/: button.cpp  checkbox.cpp  color.cpp  drag.cpp  dropdown.cpp  font.cpp  input.cpp  layout.cpp  overlay.cpp  radio.cpp  text.cpp  window.cpp
lib/tabby/tests/: main.cpp
src/: main.cpp
src/assist/: autoclicker.cpp  autoclicker.hpp  hitboxes.cpp  hitboxes.hpp
src/bot/: bot.cpp  bot.hpp  scheduler.cpp  scheduler.hpp  updater.cpp  updater.hpp
src/checkpoint/: checkpoint.cpp  checkpoint.hpp  fix.cpp  fix.hpp
src/hooks/: CCActionManager.cpp  CCDirector.cpp  CCScheduler.cpp  EditorPauseLayer.cpp  EnhancedGameObject.cpp  FMODAudioEngine.cpp  GJBaseGameLayer.cpp  GJEffectManager.cpp  GameObject.cpp  LevelEditorLayer.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  ShaderLayer.cpp  VideoOptionsLayer.cpp
src/label/: label.cpp  label.hpp
src/physics/: collisions.cpp  collisions.hpp  gjbasegamelayer.cpp  gjbasegamelayer.hpp  gravity.cpp  gravity.hpp  object.cpp  object.hpp  player.cpp  player.hpp
src/render/: dsp.cpp  dsp.hpp  ffmpeg.hpp  pass.cpp  pass.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/render/colorspace/: colorspace.hpp  nv12.hpp  rgb0.hpp  rgb24.hpp  yuv420p.hpp
src/replay/: replay.cpp  replay.hpp  system.cpp  system.hpp
src/settings/: settings.hpp
src/shared/: keys.hpp  memory.hpp
src/shared/value/: keybind.hpp  value.hpp
src/trajectory/: trajectory.cpp  trajectory.hpp
src/ui/: hook.cpp  hook.hpp  manager.cpp  manager.hpp  state.hpp  theme.cpp  theme.hpp
src/ui/lib/: stb_image.h
src/ui/widgets/: drawable.hpp  image.hpp  tab.hpp  text.hpp  window.hpp
src/util/: file.hpp  midhook.cpp  midhook.hpp  profile.hpp  try.hpp
